--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -19,5 +19,13 @@
 	},
 	"parserOptions": {
 			"ecmaVersion": 2020
-	}
+	},
+	
+	"settings": {
+		"import/resolver": {
+		  "node": {
+			"paths": ["src"]
+		  }
+		}
+	  }
 }
