--- a/server/build.gradle
+++ b/server/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
 }
 
-tasks.named('test') {
-	outputs.dir snippetsDir
-	useJUnitPlatform()
-}
+//tasks.named('test') {
+//	outputs.dir snippetsDir
+//	useJUnitPlatform()
+//}
