--- a/client/package.json
+++ b/client/package.json
@@ -52,5 +52,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0"
-  }
+  },
+  "proxy": "https://1099-118-32-224-80.ngrok-free.app/"
 }
