--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"crypto-js": "^4.1.1",
 		"http-proxy-middleware": "^2.0.6",
 		"react": "^18.2.0",
+		"react-copy-to-clipboard": "^5.1.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.43.9",
 		"react-icons": "^4.8.0",
