--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.5",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
 		"react-hook-form": "^7.43.9",
 		"react-icons": "^4.8.0",
 		"react-quill": "^2.0.0",
+		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.10.0",
 		"react-scripts": "5.0.1",
 		"styled-components": "^5.3.9",
@@ -53,5 +55,5 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0"
 	},
-	"proxy": "https://1dfc-183-97-142-84.ngrok-free.app/"
+	"proxy": "https://11be-183-97-142-84.ngrok-free.app/"
 }
