--- a/client/package.json
+++ b/client/package.json
@@ -53,5 +53,5 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0"
 	},
-	"proxy": "https://1dfc-183-97-142-84.ngrok-free.app/"
+	"proxy": "https://11be-183-97-142-84.ngrok-free.app/"
 }
